# plenoptic-for-depth

./: AdaptMIPMFrame_quality_v2.cu  CMakeLists.txt  DepthSolver.cpp  DepthSolver.h  DepthSolverManager.cpp  DepthSolverManager.h  MICycleCheck.cpp  Main.cpp  README.md  missing_symbols.c  missing_symbols.cpp
CheckModule/: MICycleCheck.h  MIDisparityFilter.cpp  MIDisparityFilter.h
Common/: Common.cpp  Common.h  CommonCUDA.cpp  CommonCUDA.h  CommonUtil.cpp  CommonUtil.h  PTotEstimator.cpp  PTotEstimator.h  QuadTree.cpp  QuadTree.h
CommonMVS/: Common.cpp  Common.h  EventQueue.h  File.h  Filters.h  Log.h  MemFile.h  Octree.h  Octree.inl  OctreeFusion.cpp  OctreeFusion.h  OctreeFusionVoxel.cpp  OctreeFusionVoxel.h  Rotation.h  Rotation.inl  Thread.h  Types.cpp  Types.h  Types.inl  Util.cpp  Util.h
FocalStack/: Behavioralmodel.cpp  Behavioralmodel.h  LFFusion.cpp  LFFusion.h  LFRefocus.cpp  LFRefocus.h  VirtualToRealDepthFunc.cpp  VirtualToRealDepthFunc.h
MINeighbor/: SelectNeighbors.cpp  SelectNeighbors.h
MIStereo/: AdaaptMIPM_EdgewareUtil.cu  AdaaptMIPM_EdgewareUtil.cuh  AdaptMIPM.cpp  AdaptMIPM.cu  AdaptMIPM.h  AdaptMIPMFrame.cpp  AdaptMIPMFrame.cu  AdaptMIPMFrame.h  AdaptMIPMFrameACMM.cpp  AdaptMIPMFrameACMM.cu  AdaptMIPMFrameACMM.h  AdaptMIPMPFPGR.cpp  AdaptMIPMPFPGR.cu  AdaptMIPMPFPGR.h  AdaptMIPMPFPGRUtil.cu  AdaptMIPMPFPGRUtil.cuh  AdaptMIPMUtil.cu  AdaptMIPMUtil.cuh  CudaUtil.cu  CudaUtil.h  MIStereoMatch.cpp  MIStereoMatch.h
MVStereo/: ACMP.cpp  ACMP.cu  ACMP.h  LFACMP.cpp  LFACMP.h  LFDepthInfo.cpp  LFDepthInfo.h
Util/: Distribution_analyzer.cpp  Distribution_analyzer.h  ImageQualityEstimate.cpp  ImageQualityEstimate.h  LightFieldPlotter.cpp  LightFieldPlotter.h  Logger.cpp  Logger.h  MISimilarityMeasure.cpp  MISimilarityMeasure.h  tinyxml2.h
